Ajuste de vistas y funcionalidad de crear

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -15,13 +15,15 @@
 <body>
     <div th:replace="~{fragments/header :: header}"></div>
 
-    <div class="container my-4">
-        <div class="text-center">
-            Home of the best movies
+    <div class="center-container">
+        <div class="startButton text-center" style="margin: 75px; padding: 25px; border-radius: 10px; background-color: #040827;">
+            <h1 class="text-white fw-bold">WELCOME TO MOVIENEST!</h1>
+            <h2 class="text-white fw-bold" style="margin-bottom: 15px;">Home of the best movies</h2>
+            <div>
+                <a class="btn btn-primary text-black" style="margin-right: 5px;" th:href="@{/movies}"><b>Explore Movies</b></a>
+                <a class="btn btn-primary text-black" style="margin-left: 5px;" th:href="@{/movies/create}"><b>Add Movies</b></a>
+            </div>
         </div>
-    </div>
-    <div class="text-center mt-4">
-        <a class="btn btn-primary" th:href="@{/movies}">Explore Movies</a>
     </div>
     
 </body>
