--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -23,3 +23,14 @@ nav{
     height: 18vw;
     object-fit: cover;
 }
+
+.startButton{
+    background-color: #040827 !important;
+    color: white;
+}
+
+.center-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
