--- a/src/main/resources/templates/movie/success.html
+++ b/src/main/resources/templates/movie/success.html
@@ -8,19 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" th:href="@{/css/app.css}">
+    <link rel="stylesheet" th:href="@{/css/app.css?v=1}">
 
     <title th:text="${title} ?: 'Success'"></title>
 </head>
 <body>
 <div th:replace="~{fragments/header :: header}"></div>
 
-<div class="container my-4">
-    <div class="text-center">
-        Movie creation was successfull 
-    </div>
+<div class="container my-4 text-center">
+    <h1>Movie creation was successfull!</h1>
 </div>
-
 
 </body>
 </html>
