corregir errores y mejorar vistas

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,8 +9,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <a class="nav-link active" th:href="@{/}">Home</a>
-          <a class="nav-link active" th:href="@{/movies}">Movies</a>
+          <a class="nav-link active" style="margin-right: 10px;" th:href="@{/}">Home</a>
+          <a class="nav-link active" style="margin-right: 10px;" th:href="@{/movies}">Movies</a>
           <a class="nav-link active" th:href="@{/movies/create}">Add Movie</a>
         </div>
       </div>
