--- a/src/main/resources/templates/movie/success.html
+++ b/src/main/resources/templates/movie/success.html
@@ -16,7 +16,8 @@
 <div th:replace="~{fragments/header :: header}"></div>
 
 <div class="container my-4 text-center">
-    <h1>Movie creation was successfull!</h1>
+    <h1 style="margin-top: 15px;">Movie creation was successfull!</h1>
+    <a class="btn btn-primary text-black" style="margin-top: 15px;" th:href="@{/movies}"><b>Go back to movies</b></a>
 </div>
 
 </body>
