--- a/src/main/resources/templates/movie/create.html
+++ b/src/main/resources/templates/movie/create.html
@@ -18,19 +18,19 @@
     <div class="container my-4"> 
         <div class="row justify-content-center"> 
             <div class="col-md-8"> 
-                <div class="card"> 
+                <div class="card text-center"> 
                     <div class="card-header text-black">Create Movie</div> 
                     <div class="card-body"> 
     <form th:action="@{/movies}" method="post"> 
-        <label for="name" style="color: black;">Movie name:</label> 
+        <label for="name" style="color: black;">Movie name:</label><br>
         <input type="text" id="name" name="name" required/><br><br>
         
-        <label for="description" style="color: black;">Description:</label> 
+        <label for="description" style="color: black;">Description:</label><br>
         <input type="text" id="description" name="description" required/><br><br>
 
-        <label for="price" style="color: black;">Price:</label> 
+        <label for="price" style="color: black;">Price:</label><br> 
         <input type="number" id="price" name="price" required/><br><br>
-         
+
         <button type="submit">Save</button> 
     </form> 
                     </div> 
