--- a/src/main/resources/templates/movie/index.html
+++ b/src/main/resources/templates/movie/index.html
@@ -16,13 +16,13 @@
 <div th:replace="~{fragments/header :: header}"></div> 
 
 <div class="container my-4"> 
-    <h2 class="text-center" th:text="${subtitle}"></h2> 
+    <h2 class="text-center"  style="margin-bottom: 20px;" th:text="${subtitle}"></h2> 
     <div class="row"> 
         <div class="col-md-4 col-lg-3 mb-2" th:each="movie : ${movies}"> 
             <div class="card"> 
                 <img src="https://placehold.co/600x400" class="card-img-top img-card"> 
                 <div class="card-body text-center"> 
-                    <a th:href="@{/movies/{id}(id=${movie.id})}" class="btn bg-primary text-white" th:text="${movie.name}"> 
+                    <a th:href="@{/movies/{id}(id=${movie.id})}" class="btn text-white" style="background-color: #060c38;" th:text="${movie.name}"> 
                     </a>
                 </div> 
             </div> 
